added id in jwtResponse. Pet Filtering